# 700

./: .gitignore  API文档规划.md  DATABASE.md  DATABASE_MIGRATIONS.md  DEPLOYMENT.md  DEPLOY_CONFIG.md  DEPLOY_SWAGGER.md  DOCKER_RSA_KEYS.md  DOMAIN_CONFIG.md  LLM_TABLE_CHECK_REPORT.md  README.md  USER_MANUAL.md  WebSocket功能总结.md  Windows客户端交互协议.md  deploy.bat  deploy.sh  docker-compose.yml  env.deployment.example  generate_password.go  tatus  分组管理需求方案.md  大模型API代理需求方案.md  客户列表需求方案.md  底库管理需求方案.md  数据库表设计-完整版.md  状态码定义.md  用户权限体系设计.md  用户管理需求方案.md  系统需求汇总.md  线索列表需求方案.md  账号列表需求方案.md  跟进记录需求方案.md  进线统计与去重逻辑.md  进线统计增量更新方案.md  项目初步设计.xlsx  项目实施规划.md
backend/: .env  .env.example  Dockerfile  README_API.md  env.example.txt  generate_hash.go  go.mod  go.sum
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/migrations/: 001_init_schema.sql  002_init_admin.sql  003_add_add_friend_link.sql  003_simplify_llm_configs.sql  004_add_deleted_at_to_contact_pool.sql  004_add_group_shares.sql  005_add_reset_time_to_line_accounts.sql
backend/scripts/: create_admin.go  init_admin.go  (+1 more)
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
nginx/: Dockerfile  README.md  entrypoint.sh  nginx.conf  nginx.conf.template
py_script/: README.md  db_performance_report.json  db_performance_test.py  llm_translation_test.py  pyproject.toml  translation_test.py  websocket_perf_test.py  websocket_test_client.py
scripts/: UPDATE_SERVER.md  deploy.bat  deploy.sh  generate_ssl.bat  generate_ssl.sh  quick_ssl.bat  quick_ssl.sh  renew_ssl.sh
(+136 files in other folders)
